edits CNAME and package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clickygame",
-  "homepage": "http://wyattsommer.com/clicky-game",
+  "homepage": "http://wyattsommer.com/clicky-game/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
